force-app/main/default/objects/Opportunity/fields/Weekly_Payment_Without_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payment_Without_Setup_Fee__c</fullName>
    <formula>IF(
  CASE(
    Setup_Fee_Term__c,
    &quot;1&quot;, 1,
    &quot;2&quot;, 2,
    &quot;3&quot;, 3,
    &quot;4&quot;, 4,
    &quot;5&quot;, 5,
    &quot;6&quot;, 6,
    &quot;7&quot;, 7,
    &quot;8&quot;, 8,
    &quot;9&quot;, 9,
    &quot;10&quot;, 10,
    &quot;0&quot;, 0,
    0
  ) = 0,

  Est_weekly_payment__c,

  Est_weekly_payment__c -
  (
    Setup_Fee__c /
    CASE(
      Setup_Fee_Term__c,
      &quot;1&quot;, 1,
      &quot;2&quot;, 2,
      &quot;3&quot;, 3,
      &quot;4&quot;, 4,
      &quot;5&quot;, 5,
      &quot;6&quot;, 6,
      &quot;7&quot;, 7,
      &quot;8&quot;, 8,
      &quot;9&quot;, 9,
      &quot;10&quot;, 10,
      &quot;0&quot;, 0,
      1
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Payment Without Setup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>