force-app/main/default/objects/Opportunity/fields/Welcome_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Status__c</fullName>
    <label>Welcome Call Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Welcome Call Rescheduled</fullName>
            </value>
            <value>
                <fullName>Welcome Call Completed.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>