force-app/main/default/objects/Opportunity/fields/Year_Today__c.field-meta.xml
<CustomField>
    <fullName>Year_Today__c</fullName>
    <formula>TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Today</label>
    <type>Text</type>
</CustomField>