force-app/main/default/objects/Opportunity/validationRules/Ensure_Required_Fields_For_Contract_Sign.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Required_Fields_For_Contract_Sign</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Contract Signed&quot;),
        ISPICKVAL(StageName, &quot;Enrolled&quot;),
ISPICKVAL(StageName, &quot;Fees Done&quot;),								ISPICKVAL(StageName, &quot;NSF&quot;),
								ISPICKVAL(StageName, &quot;Cancelled&quot;)
    ),
    OR(
        ISBLANK(Amount),
        ISBLANK(Fronter__c),ISBLANK(Case_Manager__c),
        ISBLANK(Closer__c), 
        ISBLANK(First_Draft_Date__c),
ISBLANK(TEXT(Program_Type__c))
    )
)</errorConditionFormula>
    <errorMessage>When the Stage is set to &apos;Contract Signed&apos;, the Amount, First draft date, Fronter, Closer, Program Type and Case Manager fields must be filled.</errorMessage>
</ValidationRule>