force-app/main/default/objects/Opportunity/validationRules/Fields_Missing_for_Contract_Sent_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_Missing_for_Contract_Sent_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  OR(
    ISPICKVAL(StageName, &quot;Contract Sent&quot;),
    ISPICKVAL(StageName, &quot;Submitted to UW&quot;),
    ISPICKVAL(StageName, &quot;Approved/Ready to close&quot;)
  ),
  NOT(ISBLANK(Contract_Missing_Fields__c))
)</errorConditionFormula>
    <errorMessage>Missing required information. Please complete the fields listed in Contract Missing Fields before moving this Opportunity to the selected stage.</errorMessage>
</ValidationRule>