force-app/main/default/objects/Opportunity/validationRules/Loss_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Mandatory</fullName>
    <active>true</active>
    <description>When ever opportunity lost is checked</description>
    <errorConditionFormula>AND(
    OR(
        Sales_Office__c = &quot;Debtifi&quot;,
        Sales_Office__c = &quot;Everyday Debt&quot;
    ),
    Lost__c = TRUE,
    ISPICKVAL(Loss_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please provide a reason for marking the opportunity as lost</errorMessage>
</ValidationRule>