force-app/main/default/objects/Opportunity/validationRules/LS_DC_and_Desired_for_DC.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_DC_and_Desired_for_DC</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  /* Only for Debt Crusaders office */
  Sales_Office__c = &quot;Debt Crusaders&quot;,

  /* Stage is Docs submitted to UW or beyond */
  OR(
    ISPICKVAL(StageName, &quot;Docs submitted to UW&quot;),
    ISPICKVAL(StageName, &quot;Ready to Close&quot;),
    ISPICKVAL(StageName, &quot;Contract Sent&quot;),
    ISPICKVAL(StageName, &quot;Contract Signed&quot;),
    ISPICKVAL(StageName, &quot;Enrolled&quot;)
  ),

  /* One of the two required fields is blank */
  OR(
    ISPICKVAL(Lead_Source_DC__c, &quot;&quot;),
    ISBLANK(Desired_Weekly_Payment__c)
  )
)</errorConditionFormula>
    <errorMessage>Please populate Lead Source DC and Desired Weekly Payment before moving to Docs submitted to UW (or any subsequent stage) for Debt Crusaders opportunities.</errorMessage>
</ValidationRule>