force-app/main/default/objects/Opportunity/validationRules/Restrict_LeadSource_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_LeadSource_Update</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Lead_Source__c),
    OR(
        $Profile.Name = &quot;Sales Rep&quot;,
        $Profile.Name = &quot;Sales Manager&quot;
    )
)</errorConditionFormula>
    <errorMessage>You are not allowed to update the Lead Source field.</errorMessage>
</ValidationRule>