force-app/main/default/objects/Opportunity/validationRules/Validation_Rule_for_the_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_for_the_Cancelled</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Cancelled&quot;),
    ISBLANK(TEXT(Cancellation_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Cancellation Reason is required when Stage is Cancelled.</errorMessage>
</ValidationRule>