force-app/main/default/objects/Opportunity/listViews/AEM_JJ_SBA_Everyday_Debt.listView-meta.xml
<ListView>
    <fullName>AEM_JJ_SBA_Everyday_Debt</fullName>
    <booleanFilter>1 AND (2 OR 4 )AND 3</booleanFilter>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Main_Source__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Time_Zone__c</columns>
    <columns>Estimated_Total_Debt__c</columns>
    <columns>Est_weekly_payment__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>Fronter__c</columns>
    <columns>Closer__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Quick_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lost__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Main_Source__c</field>
        <operation>contains</operation>
        <value>JJ SBA</value>
    </filters>
    <filters>
        <field>Sales_Office__c</field>
        <operation>equals</operation>
        <value>Everyday Debt</value>
    </filters>
    <filters>
        <field>Lead_Source_EDD__c</field>
        <operation>contains</operation>
        <value>JJ SBA</value>
    </filters>
    <label>AEM JJ SBA ⚖️  Everyday Debt</label>
    <sharedTo>
        <group>DCG_Lee</group>
        <group>List_View_EDD_pre_deal_status</group>
    </sharedTo>
</ListView>