force-app/main/default/objects/Opportunity/listViews/All_Medical_Debt_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Medical_Debt_Opportunities</fullName>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Main_Source__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Time_Zone__c</columns>
    <columns>Estimated_Total_Debt__c</columns>
    <columns>Est_weekly_payment__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>Fronter__c</columns>
    <columns>Closer__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Quick_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Medical_Debt__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Medical Debt Opportunities</label>
    <sharedTo>
        <group>DCG_Lee</group>
    </sharedTo>
</ListView>