force-app/main/default/objects/Opportunity/listViews/All_Opportunities_Debt_Crusaders.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_Debt_Crusaders</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Main_Source__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Time_Zone__c</columns>
    <columns>Estimated_Total_Debt__c</columns>
    <columns>Est_weekly_payment__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>Fronter__c</columns>
    <columns>Closer__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Quick_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lost__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sales_Office__c</field>
        <operation>equals</operation>
        <value>Debt Crusaders</value>
    </filters>
    <label>All Opportunities (Debt Crusaders)</label>
    <sharedTo>
        <group>DCG_Lee</group>
    </sharedTo>
</ListView>