force-app/main/default/objects/Opportunity/listViews/All_Opportunities_NXDS.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_NXDS</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6) AND 7</booleanFilter>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Main_Source__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Time_Zone__c</columns>
    <columns>Estimated_Total_Debt__c</columns>
    <columns>Est_weekly_payment__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>Fronter__c</columns>
    <columns>Closer__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Quick_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lost__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Cherry</value>
    </filters>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value>Cherry</value>
    </filters>
    <filters>
        <field>Lead_Source_DC__c</field>
        <operation>equals</operation>
        <value>Cherry</value>
    </filters>
    <filters>
        <field>Lead_Source_Debtifi__c</field>
        <operation>equals</operation>
        <value>Cherry</value>
    </filters>
    <filters>
        <field>Main_Source__c</field>
        <operation>contains</operation>
        <value>Cherry</value>
    </filters>
    <filters>
        <field>Sales_Office__c</field>
        <operation>equals</operation>
        <value>Next Day Settlement</value>
    </filters>
    <label>All Opportunities (NXDS)  🍒</label>
    <sharedTo>
        <group>DCG_Lee</group>
        <group>NDS</group>
    </sharedTo>
</ListView>